# REL-670-Calculate

./: README.md  REL-670-Calculate.spec  REL-PSD-v2.spec  REL-PSD.spec  pyproject.toml
build_latest_dist/: smoke_docx_export.docx
data/: rel_psd.sqlite
src/app/: __init__.py  main.py
src/app/core/: config.py
src/app/diagrams/: export.py  phasor_diagram.py  rx_diagram.py
src/app/localization/translations/: en.json  uk.json
src/app/models/: project.py  protection.py
src/app/services/: calculation_service.py
src/app/services/calculations/: __init__.py  complex_math.py  distance_stage_rules.py  distance_zones.py  impedance.py  phs_selector_settings.py  psb.py  psb_blocking_settings.py
src/app/ui/dialogs/: project_manager_dialog.py  settings_dialog.py
src/app/ui/styles/: app.qss
src/app/ui/widgets/: input_tables.py  matplotlib_canvas.py  source_data_widget.py
src/app/ui/windows/: main_window.py
src/app/utils/: docx_export.py  serialization.py
src/app/validation/: validators.py
src/rel_670_calculate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rel_psd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_angles.py  test_database.py  test_distance_stage_rules.py  test_distance_zones.py  test_impedance.py  test_phase_ground_zones.py  test_phase_phase_zones.py  test_phs_selector_settings.py  test_psb.py  test_psb_blocking_settings.py  test_source_data_widget.py  test_validation.py
