[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rel-670-calculate"
version = "0.1.0"
description = "Windows desktop application for RET670 relay protection engineering calculations."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "SQLAlchemy>=2.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
